--- a/public/sample/manifest.json
+++ b/public/sample/manifest.json
@@ -1,18 +1,12 @@
 {
   "manifest_version": 3,
   "version": "2.6",
-  "name": "camo theme",
+  "name": "asdf",
   "theme": {
     "colors": {
-      "frame": [71, 2, 91],
-      "toolbar": [207, 1, 192],
-      "button_background": [255, 255, 1]
-    },
-    "tints": {
-      "buttons": [0.33, 0.5, 0.47]
-    },
-    "properties": {
-      "ntp_background_alignment": "bottom"
+      "frame": [120, 222, 152, 1],
+      "toolbar": [119, 161, 128, 1],
+      "button_background": [225, 247, 173, 1]
     }
   }
 }
